Changed a width of same of the number fields to a fixed 8em and aligned text of the all number fields to the right.

--- a/frontend/app/core/assets/form.css
+++ b/frontend/app/core/assets/form.css
@@ -21,6 +21,12 @@
 .form-control[type="date"] {
   width: 11em;
 }
+.form-control[type="number"] {
+  text-align: right;
+}
+.form-control[type="number"].small {
+  width: 8em;
+}
 .form-actions {
   padding: 1em;
   margin-top: 1em;
